se incorporo el funcionamiento para verificar el qr.. se agrego estilos a las vistas

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     // scanner
     implementation('com.journeyapps:zxing-android-embedded:4.1.0') { transitive = false }
     implementation 'com.google.zxing:core:3.4.0'
+    // btn google
+    implementation 'com.shobhitpuri.custombuttons:google-signin:1.1.0'
 }
