--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,11 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //login-google
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     //retrofit
@@ -52,4 +52,6 @@ dependencies {
     implementation 'com.google.zxing:core:3.4.0'
     // btn google
     implementation 'com.shobhitpuri.custombuttons:google-signin:1.1.0'
+    // lotti animaciones
+    implementation 'com.airbnb.android:lottie:3.4.2'
 }
