--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,12 @@ dependencies {
     // scanner
     implementation('com.journeyapps:zxing-android-embedded:4.1.0') { transitive = false }
     implementation 'com.google.zxing:core:3.4.0'
-    // lotti animaciones
+    // lotti animations
     implementation 'com.airbnb.android:lottie:3.4.2'
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 }
