--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.educacioncontinua"
+        applicationId "com.ufps.geduco"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -71,8 +71,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     //dagger hilt
-    implementation 'com.google.dagger:hilt-android:2.36'
-    kapt 'com.google.dagger:hilt-compiler:2.36'
+    implementation 'com.google.dagger:hilt-android:2.37'
+    kapt 'com.google.dagger:hilt-compiler:2.37'
     //material design
     implementation 'com.google.android.material:material:1.3.0'
     // refresh
